# DeckChecker

./: CMakeLists.txt  Filler.cpp  README.md  databaseError.ui  databaseerror.cpp  databaseerror.h  deckchecker.cpp  deckchecker.h  main.cpp  test.db
